--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="master.css" />
+    <link rel="stylesheet" href="quaires.css" />
     <title>Quiz App</title>
   </head>
   <body>
@@ -60,8 +61,6 @@
         <div class="counter"></div>
       </div>
     </div>
-    <audio id="success" src="sounds/success.mp3" preload="auto"></audio>
-    <audio id="fail" src="sounds/fail.mp3" preload="auto"></audio>
     <script src="script.js"></script>
   </body>
 </html>
